wip: Boost non-deprecated test coverage